Add main screen and tutorial screens

--- a/Entwined/EntwinedTests/Info.plist
+++ b/Entwined/EntwinedTests/Info.plist
@@ -10,6 +10,14 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app saves photos and videos to your photo library.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Need camera to allow AR</string>
+	<key>CFBundleDisplayName</key>
+	<string></string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
